new worker cd pipeline